violating_resources/pod-security-policy/flexvolume-drivers/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata: # kpt-merge: /flexvolume-drivers
  name: flexvolume-drivers
tests:
  - name: flexvolume-drivers
    template: template.yaml
    constraint: samples/psp-flexvolume-drivers/constraint.yaml
    cases:
      - name: example-allowed
        object: samples/psp-flexvolume-drivers/example_allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: samples/psp-flexvolume-drivers/example_disallowed.yaml
        assertions:
          - violations: yes
